<resources>
    <string name="app_name">Taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="todo">TODO</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="Submitted">Submitted!</string>
    <string name="no_task_name">no name</string>
    <string name="username_with_input">Username: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_state">no_task_state</string>
    <string name="submit" />
    <string name="state">state</string>
    <string name="task_description">description</string>
    <string name="task_name">Name</string>
    <string name="total_tasks_0">total</string>
    <string name="add_task_two">add task</string>
    <string name="save">save</string>
    <string name="user_settings">setting</string>
    <string name="team_name_with_input">"Team: %1$s"</string>
    <string name="team">team</string>
    <string name="add_task_title">add title</string>
    <string name="spinnerteam">spinner team</string>
    <string name="Upload">Upload</string>

</resources>